[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.2"
confy = "0.6.1"
dunce = "1.0.4"
log = "0.4.21"
once_cell = "1.19.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
peroxide = "0.37.3"
serde = { version = "1.0.200", features = ["derive"] }
